# endo-machine

./: default.nix  endo-machine.cabal
nixpkgs/: default.nix
src/: EndoMachine.hs
