name:
  endo-machine
version:
  0.1.0
synopsis:
  Synopsis
license:
  BSD3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    EndoMachine
  build-depends:
    base,
    capability,
    lens,
    transformers
  hs-source-dirs:
    src
  default-language:
    Haskell2010
